--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      (function () {
+        if (sessionStorage.redirect) {
+          history.replaceState(null, null, sessionStorage.redirect);
+          delete sessionStorage.redirect;
+        }
+      })();
+    </script>
   </body>
 </html>
