--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>TASESQ</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <script>
