--- a/404.html
+++ b/404.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Redirecting...</title>
-    <script>
-        sessionStorage.redirect = location.href;
-    </script>
-    <meta http-equiv="refresh" content="0;URL='/tasesq'"></meta>
-</head>
-<body>
-    If you are not redirected, please <a href="/tasesq">click here</a>.
-</body>
+    <meta http-equiv="refresh" content="0;URL='/'" />
+  </head>
+  <body>
+    <h1>Redirecting...</h1>
+    <p>
+      If you are not redirected to the new page within a few seconds, please
+      <a href="/">click here</a>.
+    </p>
+  </body>
 </html>
